# tvtrader-agents

./: .editorconfig  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
targets/: base.py  console.py
tvt_agents/: __main__.py
tvt_agents/cli/: __init__.py  example.py  show.py  timing.py
tvt_agents/distributor/: __init__.py  base.py  exceptions.py  formatter.py
tvt_agents/distributor/formatters/: graphite_formatter.py
tvt_agents/distributor/logutil/: __init__.py
tvt_agents/distributor/source/: __init__.py
tvt_agents/example/: threaded_target.py
tvt_agents/targets/: graphite.py  network.py
tvt_agents/tests/unit/: conftest.py  test_graphite_formatter.py  test_logutil.py
