[tool.poetry]
name = "tvt_agents"
version = "0.1.0-a797860"
description = "Distributed agents framework for the TvTrader suite"
authors = ["Zoltan Fabian <zoltan.dzooli.fabian@gmail.com>"]
keywords = ["potery", "messaging", "distributed", "trading", "multithread"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12 || ^3.13"
aio-pika = "^9.0"
wsaccel = "^0.6.7"
ws4py = "^0.6.0"
attrs = "^25.3.0"
asyncclick = "^8.1.3.4"
anyio = ">4.6.0"
urllib3 = "^2.5.0"
pytest-html-reporter = "^0.2.9"
pytest = "^8.3.5"
pytest-otel = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
black = { extras = ["d"], version = "25.1.0" }
mypy = { extras = ["d"], version = "^1.9.0" }
allure-pytest = "^2.13.2"
pytest-click = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-json-report = "^1.5.0"
pytest-otel = "^1.5.0"
pytest-mock = "^3.12.0"
pytest-live = "^0.6"
pytest-sugar = "^1.0.0"
pytest-agent = "^0.0.5"
pytest-bdd = "^8.1.0"
pytest-asyncio = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tvtrader_distributor = "tvt_agents.__main__:main"


[tool.mypy]
python_version = "3.12"
python_executable = ".venv/Scripts/python.exe"
ignore_missing_imports = true
