[project]
name = "tvt_agents"
version = "0.1.0-a797860"
description = "Distributed agents framework for the TvTrader suite"
authors = [{name = "Zoltan Fabian", email = "zoltan.dzooli.fabian@gmail.com"}]
keywords = ["poetry", "messaging", "distributed", "trading", "multithread"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika",
    "wsaccel",
    "ws4py",
    "attrs",
    "asyncclick",
    "anyio>4.6.0",
    "urllib3",
    "orjson",
    "requests>=2.32.0",
    "zipp>=3.19.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "allure-pytest",
    "pytest-click",
    "pytest-cov",
    "pytest-json-report",
    "pytest-mock",
    "pytest-live",
    "pytest-sugar",
    "pytest-agent",
    "pytest-bdd",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tvtrader_distributor = "tvt_agents.__main__:main"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
